; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/wilc1000/extr_wilc_wlan_cfg.c_wilc_wlan_cfg_set_str.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/wilc1000/extr_wilc_wlan_cfg.c_wilc_wlan_cfg_set_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WILC_MAX_CFG_FRAME_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, i64, i32*, i64)* @wilc_wlan_cfg_set_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wilc_wlan_cfg_set_str(i32* %0, i64 %1, i64 %2, i32* %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  store i32* %0, i32** %7, align 8
  store i64 %1, i64* %8, align 8
  store i64 %2, i64* %9, align 8
  store i32* %3, i32** %10, align 8
  store i64 %4, i64* %11, align 8
  %12 = load i64, i64* %8, align 8
  %13 = load i64, i64* %11, align 8
  %14 = add nsw i64 %12, %13
  %15 = add nsw i64 %14, 4
  %16 = load i64, i64* @WILC_MAX_CFG_FRAME_SIZE, align 8
  %17 = icmp sge i64 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %5
  store i32 0, i32* %6, align 4
  br label %48

19:                                               ; preds = %5
  %20 = load i64, i64* %9, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = load i64, i64* %8, align 8
  %23 = getelementptr inbounds i32, i32* %21, i64 %22
  %24 = call i32 @put_unaligned_le16(i64 %20, i32* %23)
  %25 = load i64, i64* %11, align 8
  %26 = load i32*, i32** %7, align 8
  %27 = load i64, i64* %8, align 8
  %28 = add nsw i64 %27, 2
  %29 = getelementptr inbounds i32, i32* %26, i64 %28
  %30 = call i32 @put_unaligned_le16(i64 %25, i32* %29)
  %31 = load i32*, i32** %10, align 8
  %32 = icmp ne i32* %31, null
  br i1 %32, label %33, label %44

33:                                               ; preds = %19
  %34 = load i64, i64* %11, align 8
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %44

36:                                               ; preds = %33
  %37 = load i32*, i32** %7, align 8
  %38 = load i64, i64* %8, align 8
  %39 = add nsw i64 %38, 4
  %40 = getelementptr inbounds i32, i32* %37, i64 %39
  %41 = load i32*, i32** %10, align 8
  %42 = load i64, i64* %11, align 8
  %43 = call i32 @memcpy(i32* %40, i32* %41, i64 %42)
  br label %44

44:                                               ; preds = %36, %33, %19
  %45 = load i64, i64* %11, align 8
  %46 = add nsw i64 %45, 4
  %47 = trunc i64 %46 to i32
  store i32 %47, i32* %6, align 4
  br label %48

48:                                               ; preds = %44, %18
  %49 = load i32, i32* %6, align 4
  ret i32 %49
}

declare dso_local i32 @put_unaligned_le16(i64, i32*) #1

declare dso_local i32 @memcpy(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
